--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -36,6 +36,7 @@
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/dataTables.fixedHeader.js') }} }}"></script>
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
+<script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/inbox.js')}}"></script>
 <style>
@@ -151,6 +152,7 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
+                                    <th>BerkasID</th>
                                     <th>No</th>
                                     <th>Nomor Berkas</th>
                                     <th>Tahun Berkas</th>
@@ -170,12 +172,14 @@
             </div>
             <!-- /.tab-pane -->
             <div class="tab-pane" id="tabDetail">
-                <div class="error-content">
-                    <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
-    
-                    <p class="text-center">
-                        We could not find the page you were looking for.
-                    </p>
+                <div id="berkasView">
+                    <div class="error-content">
+                        <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+            
+                        <p class="text-center">
+                            We could not find the page you were looking for.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
