--- a/view/node/detailinbox.html
+++ b/view/node/detailinbox.html
@@ -263,7 +263,7 @@
                     berkasid: $('input:hidden[name=berkasid]').val(),
                     nodeid: $('input:hidden[name=nodeid]').val(),
                     petugasid: $('#petugas').val(),
-                    pesan: $('#pesan').text(),
+                    pesan: $('#pesan').val(),
                 }),
                 async: false,
                 headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
