--- a/view/page/register/compose_list.html
+++ b/view/page/register/compose_list.html
@@ -169,6 +169,8 @@
                                     <th>Petugas Register</th>
                                     <th>Nomor Berkas</th>
                                     <th>Tahun Berkas</th>
+                                    <th>Kecamatan</th>
+                                    <th>Desa</th>
                                     <th>Kegiatan</th>
                                     <th>Prosedur</th>
                                     <th>Status</th>
